--- a/IF/Classes/Ext/ChatService/ChartIOS/Controller/mailList/SysMailListCell.xib
+++ b/IF/Classes/Ext/ChatService/ChartIOS/Controller/mailList/SysMailListCell.xib
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -13,84 +14,64 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="61"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="60.5"/>
+                <frame key="frameInset" width="320" height="60"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jb3-eF-T7p" userLabel="rootView">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="60"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MBc-Hw-eLG" userLabel="showMainView">
-                                <rect key="frame" x="36" y="0.0" width="284" height="60"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="G7R-4u-wtl" userLabel="headbackImageView">
-                                        <rect key="frame" x="5" y="5" width="50" height="50"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="G7R-4u-wtl" secondAttribute="height" multiplier="1:1" id="42N-Sm-7e8"/>
                                             <constraint firstAttribute="width" secondItem="G7R-4u-wtl" secondAttribute="height" multiplier="1:1" id="eeQ-2P-URP"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mail_list_edit_gift" translatesAutoresizingMaskIntoConstraints="NO" id="yoG-3q-veZ" userLabel="giftImageView">
-                                        <rect key="frame" x="248" y="24" width="30" height="30"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="yoG-3q-veZ" secondAttribute="height" multiplier="1:1" id="ubz-w6-wpH"/>
                                         </constraints>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="标题" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eiQ-tw-6v1" userLabel="titlelabel">
-                                        <rect key="frame" x="80" y="4" width="26" height="16"/>
-                                        <animations/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="标题" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eiQ-tw-6v1" userLabel="titlelabel">
+                                        <frame key="frameInset" minX="80" minY="4" width="26" height="16"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mail_seconLIst_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="MN2-14-HuU" userLabel="jiantouImageView">
-                                        <rect key="frame" x="271" y="7" width="8" height="12"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="MN2-14-HuU" secondAttribute="height" multiplier="11:18" id="Gh6-HD-aRE"/>
                                         </constraints>
                                     </imageView>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3IJ-bn-97a" userLabel="timelabel">
-                                        <rect key="frame" x="232" y="5" width="34" height="14.5"/>
-                                        <animations/>
                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Mail_02" translatesAutoresizingMaskIntoConstraints="NO" id="VC5-de-tfi" userLabel="unReadImageView">
-                                        <rect key="frame" x="65" y="7" width="10" height="10"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="VC5-de-tfi" secondAttribute="height" multiplier="1:1" id="2yI-kb-5nm"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="mail_list_divider" translatesAutoresizingMaskIntoConstraints="NO" id="tC1-X2-fpX">
-                                        <rect key="frame" x="65" y="59" width="219" height="1"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="1" id="0nS-xe-iLw"/>
                                         </constraints>
                                     </imageView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="g015.png" translatesAutoresizingMaskIntoConstraints="NO" id="Uar-JO-0lF" userLabel="headImage View">
-                                        <rect key="frame" x="5" y="5" width="50" height="50"/>
-                                        <animations/>
                                         <constraints>
                                             <constraint firstAttribute="width" secondItem="Uar-JO-0lF" secondAttribute="height" multiplier="1:1" id="fLa-z8-Tbc"/>
                                         </constraints>
                                     </imageView>
                                     <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ogg-Yp-KWq" userLabel="zhegaiButton">
-                                        <rect key="frame" x="0.0" y="0.0" width="284" height="60"/>
-                                        <animations/>
                                         <state key="normal">
-                                            <color key="titleColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="zhegaiButtonAction:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="2oz-wD-46H"/>
                                         </connections>
                                     </button>
                                 </subviews>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="trailing" secondItem="tC1-X2-fpX" secondAttribute="trailing" id="1hI-iB-py8"/>
                                     <constraint firstItem="3IJ-bn-97a" firstAttribute="top" secondItem="MBc-Hw-eLG" secondAttribute="top" constant="5" id="1mp-pd-sec"/>
@@ -124,8 +105,6 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tu4-Ia-h8Y">
-                                <rect key="frame" x="0.0" y="12" width="36" height="36"/>
-                                <animations/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tu4-Ia-h8Y" secondAttribute="height" multiplier="1:1" id="B46-Ej-GzV"/>
                                 </constraints>
@@ -137,7 +116,6 @@
                                 </connections>
                             </button>
                         </subviews>
-                        <animations/>
                         <constraints>
                             <constraint firstItem="tu4-Ia-h8Y" firstAttribute="leading" secondItem="jb3-eF-T7p" secondAttribute="leading" id="CML-cF-hfj"/>
                             <constraint firstItem="tu4-Ia-h8Y" firstAttribute="centerY" secondItem="jb3-eF-T7p" secondAttribute="centerY" id="CWd-yf-s9R"/>
@@ -149,7 +127,6 @@
                         </constraints>
                     </view>
                 </subviews>
-                <animations/>
                 <constraints>
                     <constraint firstItem="jb3-eF-T7p" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Awl-LL-C0A"/>
                     <constraint firstAttribute="bottom" secondItem="jb3-eF-T7p" secondAttribute="bottom" id="YOn-dI-ALs"/>
@@ -157,7 +134,6 @@
                     <constraint firstAttribute="trailing" secondItem="jb3-eF-T7p" secondAttribute="trailing" id="spP-Nc-lFN"/>
                 </constraints>
             </tableViewCellContentView>
-            <animations/>
             <connections>
                 <outlet property="giftImageView" destination="yoG-3q-veZ" id="ttK-Pz-TZ5"/>
                 <outlet property="headBackImageView" destination="G7R-4u-wtl" id="GYs-Jf-yc5"/>
@@ -180,7 +156,7 @@
         <image name="Mail_02" width="14" height="14"/>
         <image name="Mail_seconLIst_arrow" width="11" height="18"/>
         <image name="g015.png" width="136" height="136"/>
-        <image name="mail_list_divider" width="30" height="2"/>
+        <image name="mail_list_divider" width="54" height="1"/>
         <image name="mail_list_edit_check_box_checked" width="40" height="40"/>
         <image name="mail_list_edit_check_box_unchecked" width="40" height="40"/>
         <image name="mail_list_edit_gift" width="70" height="70"/>
